apps/base/pgadmin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
    description: "Local network access to pgAdmin"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.local.pjfaraon.net`)
      kind: Rule
      services:
        - name: pgadmin
          port: 80
  tls:
    secretName: pgadmin-tls
